<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFadedWhite"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:layout_width="@dimen/edit_icon_size"
        android:layout_height="@dimen/edit_icon_size"
        android:src="@drawable/ic_pen"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="@id/iv_profile_dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/iv_profile_dp"
        app:layout_constraintTop_toTopOf="@id/iv_profile_dp"
        app:tint="@color/colorAccent"
        tools:ignore="ContentDescription" />

    <arunkbabu90.gorefer.views.CircularImageView
        android:id="@+id/iv_profile_dp"
        android:layout_width="@dimen/dp_view_size"
        android:layout_height="@dimen/dp_view_size"
        android:layout_margin="@dimen/medium_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/default_dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_invite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/invite_frnds"
        android:textAllCaps="false"
        app:cornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_dp"
        app:layout_constraintTop_toTopOf="@id/iv_profile_dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_other_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/other_settings"
        android:textAllCaps="false"
        app:cornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_profile_dp"
        app:layout_constraintTop_toBottomOf="@id/btn_invite"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_dp"
        android:background="@color/colorFadedWhite"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorAccent"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="4dp"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@color/colorLightGrey" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_profile" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/colorDarkBackgroundGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorAccent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_recommendations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/ic_recommendations"
        app:backgroundTint="@color/colorFadedWhite"
        app:fabSize="mini"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab_add"
        app:layout_constraintEnd_toEndOf="@id/fab_add"
        app:layout_constraintStart_toStartOf="@id/fab_add"
        app:tint="@color/colorAccent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recommendations_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/recommendations"
        android:visibility="gone"
        android:translationZ="6dp"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="@id/fab_recommendations"
        app:layout_constraintEnd_toStartOf="@id/fab_recommendations"
        app:layout_constraintBottom_toBottomOf="@id/fab_recommendations" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_offerings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/ic_offerings"
        app:backgroundTint="@color/colorFadedWhite"
        app:fabSize="mini"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab_recommendations"
        app:layout_constraintEnd_toEndOf="@id/fab_add"
        app:layout_constraintStart_toStartOf="@id/fab_add"
        app:tint="@color/colorAccent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/offerings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/offerings"
        android:visibility="gone"
        android:translationZ="6dp"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="@id/fab_offerings"
        app:layout_constraintEnd_toStartOf="@id/fab_offerings"
        app:layout_constraintBottom_toBottomOf="@id/fab_offerings" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_looking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:src="@drawable/ic_looking_for"
        app:backgroundTint="@color/colorFadedWhite"
        app:fabSize="mini"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab_offerings"
        app:layout_constraintEnd_toEndOf="@id/fab_add"
        app:layout_constraintStart_toStartOf="@id/fab_add"
        app:tint="@color/colorAccent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/looking_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/looking_for"
        android:visibility="gone"
        android:translationZ="6dp"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="@id/fab_looking"
        app:layout_constraintEnd_toStartOf="@id/fab_looking"
        app:layout_constraintBottom_toBottomOf="@id/fab_looking" />

    <View
        android:id="@+id/fragProfile_semiTransparentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="4dp"
        android:visibility="gone"
        android:background="@color/colorDarkGreyTransparent"/>
</androidx.constraintlayout.widget.ConstraintLayout>